cybor name change

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 	<header>
 		<div class="header-wrapper">
-			<h2 class="header-logo">Cyber<span>X</span></h2>
+			<h2 class="header-logo">Cybor<span>X</span></h2>
 			
 			<!-- menu button -->
 
